--- a/register.html
+++ b/register.html
@@ -31,29 +31,26 @@
   </header>
 
   <div class="form-wrapper">
-
-    <form class="register-form" action="/action_page.php" onsubmit="return validateForm2(this)">
-    <div class="register-container">
-      <h1>Register</h1>
-      <p>Please fill in this form to create an account.</p>
+    <form class="form" onsubmit="return validateForm(this)">
+    <div class="form-container">
+      <h1 class="register-head">Register</h1>
+      <p class="register-para">Please fill in this form to create an account.</p>
       <hr>
 
-      <label for="username"><b>Username</b></label>
+      <label class="register-para" for="username"><b>Username</b></label>
       <input type="text" placeholder="Enter Username" name="username" required>
 
-      <label for="password"><b>Password</b></label>
+      <label class="register-para" for="password"><b>Password</b></label>
       <input type="password" placeholder="Enter Password" name="password" required>
 
-      <label for="passwordrepeat"><b>Repeat Password</b></label>
+      <label class="register-para" for="passwordrepeat"><b>Repeat Password</b></label>
       <input type="password" placeholder="Repeat Password" name="passwordrepeat" required>
       <hr>
-      <!-- <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p> -->
-
-      <button type="submit" class="registerbtn">Register</button>
+      <button type="submit" class="form-button">Register</button>
     </div>
 
-    <div class="register-container signin">
-      <p>Already have an account? <a href="login.html">Sign in</a>.</p>
+    <div class="form-bottom">
+      <p class="register-para">Already have an account? <a href="login.html">Sign in</a>.</p>
     </div>
   </form>
   </div>
