--- a/table.html
+++ b/table.html
@@ -60,8 +60,8 @@
     </div>
   </div> -->
 
-		<div class="container-table100">
-			<!-- <div class="wrap-table100"> -->
+		<!-- <div class="container-table100">
+			<div class="wrap-table100">
 				<div class="table100">
 					<table>
 						<thead>
@@ -69,15 +69,8 @@
 								<th class="column">Poll ID</th>
                 <th class="column">Poll Creator</th>
                 <th class="column">Poll Name</th>
-                <th class="column"></th>
-
-                <!-- <th class="column"></th> -->
-
-
-								<!-- <th class="column">Name</th>
-								<th class="column">Price</th>
-								<th class="column">Quantity</th>
-								<th class="column">Total</th> -->
+                <th class="column2"></th>
+                <th class="column2"></th>
 							</tr>
 						</thead>
 						<tbody>
@@ -85,29 +78,53 @@
 									<td class="column">1</td>
                   <td class="column">Samuel Martin</td>
 									<td class="column">Who is the best footballer in the world?</td>
-                  <td class="column"><a href="#" class="button">View Poll </a></td>
-                  <!-- <td class="column">  <a href="#" class="button"> Vote on Poll </a></td> -->
-
-									<!-- <td class="column">iPhone X 64Gb Grey</td>
-									<td class="column">$999.00</td>
-									<td class="column">1</td>
-									<td class="column">$999.00</td> -->
+                  <td class="column2"><a href="#" class="cancelbtn">View Poll </a></td>
+                  <td class="column2"><a href="#" class="cancelbtn">Delete Poll </a></td>
 								</tr>
 								<tr>
 									<td class="column">2</td>
                   <td class="column">Samuel Martin</td>
 									<td class="column">200397</td>
-                  <td class="column"><a href="#" class="button">View Poll </a></td>
-                  <!-- <td class="column">  <a href="#" class="button"> Vote on Poll </a></td> -->
-									<!-- <td class="column">Samsung S8 Black</td>
-									<td class="column">$756.00</td>
-									<td class="column">1</td>
-									<td class="column">$756.00</td> -->
+                  <td class="column2"><a href="#" class="cancelbtn">View Poll </a></td>
+                  <td class="column2"><a href="#" class="cancelbtn">Delete Poll </a></td>
 								</tr>
               </table>
+              <a href="#" class="cancelbtn center otherbtn">Create New Poll </a>
             </div>
-          <!-- </div> -->
-        </div>
+          <</dv>
+        </div> -->
+      <!-- <div class="table-container"> -->
+        <div class="table-container">
+        <table class="table-content">
+          <thead>
+            <tr>
+              <th>Poll ID</th>
+              <th>Poll Creator</th>
+              <th>Poll Name</th>
+              <th></th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+              <tr>
+                <td>1</td>
+                <td class="column">Samuel Martin</td>
+                <td>Who is the best footballer in the world?</td>
+                <td><a href="#" class="tablebtn">View Poll </a></td>
+                <td><a href="#" class="tablebtn">Delete Poll </a></td>
+              </tr>
+              <tr>
+                <td class="column">2</td>
+                <td class="column">Samuel Martin</td>
+                <td>200397</td>
+                <td><a href="#" class="tablebtn">View Poll </a></td>
+                <td><a href="#" class="tablebtn">Delete Poll </a></td>
+              </tr>
+            </table>
+            <a href="#" class="otherbtn">Create New Poll </a>
+          </div>
+
+
 
 
   <footer class="dark-background">
