--- a/admin.html
+++ b/admin.html
@@ -42,12 +42,12 @@
           <tbody>
               <tr>
                 <td>1</td>
-                <td class="column">Samuel Martin</td>
+                <td>Samuel Martin</td>
                 <td><a href="#" class="tablebtn">Delete User </a></td>
               </tr>
               <tr>
-                <td class="column">2</td>
-                <td class="column">Samuel Martin</td>
+                <td>2</td>
+                <td>Samuel Martin</td>
                 <td><a href="#" class="tablebtn">Delete User </a></td>
               </tr>
             </table>
