--- a/createnewpoll.html
+++ b/createnewpoll.html
@@ -32,34 +32,28 @@
   </header>
 
   <div class="form-wrapper">
-    <form class="form" onsubmit="return validateForm(this)">
+    <form class="form" onsubmit="return validateForm2(this)">
       <div class="form-container">
-        <h1 class="register-head">Create a new user</h1>
-        <p class="register-para">Please fill in this form to create a new user.</p>
+        <h1 class="register-head">Create New Poll</h1>
+        <p class="register-para">Please fill in this form to create a new poll.</p>
         <hr>
-
         <label class="register-para" for="username"><b>Username</b></label>
         <input id="username" type="text" placeholder="Enter Username" name="username" required>
-
-        <label class="register-para" for="password"><b>Password</b></label>
-        <input id="password" type="password" placeholder="Enter Password" name="password" required>
-
-        <label class="register-para" for="passwordrepeat"><b>Repeat Password</b></label>
-        <input id="passwordrepeat" type="password" placeholder="Repeat Password" name="passwordrepeat" required>
+        <label class="register-para" for="pollname"><b>Poll Name</b></label>
+        <input id="pollname" type="text" placeholder="Enter Poll Name" name="pollname" required>
         <hr>
-        <button type="submit" class="form-button">Register User</button>
+        <button type="submit" class="form-button">Submit Poll</button>
       </div>
     </form>
   </div>
-
 
   <footer class="dark-background">
     <p id="demo">  </p>
     <p id="demo2">  </p>
   </footer>
 
-
   <script src="main.js">
   </script>
+
 </body>
 </html>
