--- a/register.html
+++ b/register.html
@@ -34,8 +34,8 @@
   <div class="form-wrapper">
     <form class="form" onsubmit="return validateForm(this)">
       <div class="form-container">
-        <h1 class="register-head">Create a new user</h1>
-        <p class="register-para">Please fill in this form to create a new user.</p>
+        <h1 class="register-head">Register</h1>
+        <p class="register-para">Please fill in this form to create an account.</p>
         <hr>
 
         <label class="register-para" for="username"><b>Username</b></label>
@@ -47,17 +47,19 @@
         <label class="register-para" for="passwordrepeat"><b>Repeat Password</b></label>
         <input id="passwordrepeat" type="password" placeholder="Repeat Password" name="passwordrepeat" required>
         <hr>
-        <button type="submit" class="form-button">Register User</button>
+        <button type="submit" class="form-button">Register</button>
+      </div>
+
+      <div class="form-bottom">
+        <p class="register-para">Already have an account? <a href="login.html">Sign in</a>.</p>
       </div>
     </form>
   </div>
-
 
   <footer class="dark-background">
     <p id="demo">  </p>
     <p id="demo2">  </p>
   </footer>
-
 
   <script src="main.js">
   </script>
